# xls

./: .travis.yml  Changelog.md  LICENSE  README.md  appveyor.yml  stack-7.8.yaml  xls.cabal
Data/: Xls.hs
doc/: Data-Xls.html  doc-index.html  index-frames.html  index.html  mini_Data-Xls.html  xls.haddock  xls.txt
doc/src/: Data-Xls.html
lib/: libxls-wrapper.c
lib/Data/: Xls.hs  XlsCell.hs
lib/libxls/config/: config.h
lib/libxls/src/: xls.c
src/: haskell-api.c
test/: Spec.hs  xls2csv.hs
test/data/: test.xls
