name:                xls
version:             0.1.0.0
synopsis:            Parse Microsoft xls format (BIFF/Excel 97-2004)
description:         Please see README.md
homepage:            http://github.com/harendra-kumar/xls
license:             BSD3
license-file:        LICENSE
author:              Harendra Kumar, TBD
maintainer:          harendra.kumar@gmail.com
category:            Codec,Data,Spreadsheet
stability:           Experimental

build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  -- XXX remove dependency on configure
  cpp-options:         -DHAVE_CONFIG_H
  -- XXX make it portable
  cc-options:          -std=gnu99

  hs-source-dirs:      lib
  exposed-modules:     Data.Xls
  build-depends:       base >= 4 && < 5
                     , conduit >= 1.1.0 && < 1.3
                     , filepath
                     , resourcet >= 0.3 && < 1.2
                     , transformers >= 0.1

  c-sources:           lib/libxls-wrapper.c,
                       lib/libxls/libxls/src/xlstool.c,
                       lib/libxls/libxls/src/endian.c,
                       lib/libxls/libxls/src/ole.c,
                       lib/libxls/libxls/src/xls.c

  include-dirs:        lib/libxls/libxls,
                       lib/libxls/libxls/include

executable xls2csv
  default-language:    Haskell2010
  hs-source-dirs:      bin
  main-is:             xls2csv.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , transformers
                      , conduit
                      , resourcet
                      , getopt-generics
                      , xls

test-suite xls-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, xls
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/harendra-kumar/xls
